# farabin

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  balance_sheet.json  data.json  db.sqlite3  db.sqlite3-2  db.sqlite3-3  db.sqlite3-4  db.sqlite3-vps  db2.sqlite3  docker-compose.yml  dump.rdb  entrypoint.sh  export_database.ipynb  guide.py  load.sh  localhost+2-key.pem  localhost+2.pem  makefile  manage.py  nginx.conf  poetry_requirements.txt  pyproject.toml  pyprojectpoetry.toml  pytest.ini  requirements.txt  requirements_poetry.txt  run.sh  run_celery.sh  run_server.sh  start.sh  status.sh  stop.sh  supervisord.conf  tests.py  تراز.xlsx
.github/workflows/: switch-to-production.yml
API_doc/Faradid/: bruno.json  collection.bru  get hr history.bru  human-resources.bru  test.bru
Docker/: Dockerfile
apps/balancesheet/: __init__.py  admin.py  apps.py  models-sample.py  serializers.py  tasks.py  urls.py  views.py
apps/company/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
apps/core/: __init__.py  admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  validators.py  views.py
apps/finance/: admin.py  apps.py  functions.py  models.py  paginations.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  utils_depraceted.py  views.py
apps/management/: admin.py  apps.py  models.py  paginations.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/questionnaire/: admin.py  apps.py  models.py  serializers.py  urls.py
common/: __init__.py  viewset_mixin.py
company/: admin.py  apps.py  models.py  paginations.py  serializers.py  signals.py  tasks.py  urls.py  views.py
config/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
constants/: typing.py
core/: admin.py  apps.py  celery.py  managers.py  models.py  otp.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py
diagnostics/: admin.py  apps.py  functions.py  managers.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  utils_1.py  validators.py  views.py
docs/: admin_panel_usage.md
farabin/: asgi.py  auth.bru  celery.py  settings.py  urls.py  wsgi.py
farabin-api/: bruno.json  farabin api.bru  file deletion.bru
finance/: admin.py  apps.py  functions.py  models.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  utils_depraceted.py  views.py
locustfiles/: signin.py
management/: admin.py  apps.py  models.py  paginations.py  schema.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
mock-data-entry/: questionnaire-question-answer.py
request/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
scripts/: celery.sh  celery_beat.sh  celery_worker.sh  entrypoint.sh  env.sh  flower.sh  ready_for_production.sh  remove_migrations.sh  server.sh  start.sh  status.sh
tests/: utils.py
ticket/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
tickets/: admin.py  apps.py  models.py  paginations.py  serializers.py  signals.py  urls.py  views.py
(+463 files in other folders)
